--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^5.5.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-manifest": "^5.5.0",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-root-import": "^2.0.9",
     "gatsby-plugin-sharp": "^5.5.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
