--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-root-import": "^2.0.9",
     "gatsby-plugin-sharp": "^5.5.0",
+    "gatsby-plugin-styled-components": "^6.5.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-source-contentful": "^8.5.0",
     "gatsby-source-filesystem": "^5.5.0",
