mobile image fix

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-manifest": "^5.5.0",
     "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-prismic-previews": "^5.2.10",
     "gatsby-plugin-root-import": "^2.0.9",
     "gatsby-plugin-sharp": "^5.5.0",
     "gatsby-plugin-styled-components": "^6.5.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-source-contentful": "^8.5.0",
     "gatsby-source-filesystem": "^5.5.0",
+    "gatsby-source-prismic": "^5.2.10",
     "gatsby-transformer-sharp": "^5.5.0",
     "gsap": "npm:@gsap/shockingly@^3.11.1",
     "path": "^0.12.7",
