--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sharp": "^5.5.0",
     "gatsby-plugin-styled-components": "^6.5.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-source-contentful": "^8.11.0",
     "gatsby-source-filesystem": "^5.5.0",
     "gatsby-transformer-sharp": "^5.5.0",
     "gsap": "npm:@gsap/shockingly@^3.11.1",
